# roboy_managing_node

./: CMakeLists.txt  package.xml
cmake/: findpcap.cmake  options.cmake
include/: interface.hpp  myoMaster.hpp
include/roboy_managing_node/: UDPSocket.hpp  myoMaster.hpp  roboy.hpp
launch/: PaBi_dance.launch  roboy.launch
src/: UDPSocket.cpp  app.c  interface.cpp  main.cpp  myoMaster.cpp  roboy.cpp
